--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -7,7 +7,17 @@
         "System": "Warning",
         "IdentityServer4": "Information"
       }
+    },
+    "Connections": {
+      "SQLServerCon": "Data Source=.;Initial Catalog=Logging;User Id=sa;Password=Password@1;",
+      "SQLServerTableName": "PerfLogNew",
+      "ElasticsearchCon": "http://localhost:9200",
+      "FileLogPath": "C:\\temp\\Logs"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CodeCamp": "Data Source=.;Initial Catalog=CodeCamp;User Id=sa;Password=Password@1; Connect Timeout=30;",
+    "CodeCampLocal": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=PSCodeCamp;Integrated Security=True;Connect Timeout=30;"
+  }
 }
